# LocalForge

./: .gitignore  CLAUDE.MD.md  SESSION_SUMMARY.md  SimpliGen.md  electron-builder.config.js  electron.vite.config.ts  package-lock.json  package.json  vitest.config.ts
docs/superpowers/plans/: 2026-04-19-localforge-plan-2-sidecar.md  2026-04-19-localforge-plan-6-library.md  2026-04-19-localforge-plan-7-settings.md  (+3 more)
scripts/: build-release.bat
sidecar/: app.py  build.bat  localforge-sidecar.spec  main.py  pyproject.toml
sidecar/routers/: engine.py  generate.py  health.py  models.py  setup.py
sidecar/services/: comfyui_manager.py  generation_runner.py  gpu_detector.py  model_manager.py  prompt_assembler.py  setup_installer.py
sidecar/tests/: conftest.py  test_comfyui_manager.py  test_engine.py  test_generate_router.py  test_generation_runner.py  test_gpu_detector.py  test_health.py  test_integration.py  test_model_manager.py  test_models_router.py  test_prompt_assembler.py  test_setup_installer.py  test_setup_router.py
src/main/: database.ts  engine-dir.ts  index.ts  ipc.ts  setup.ts  sidecar.ts
src/preload/: index.ts
src/renderer/: index.html
tests/: setup.ts
tests/main/: build-config.test.ts  build-scripts.test.ts  database.test.ts  settings-db.test.ts  setup.test.ts
tests/renderer/: App.test.tsx  Generate.test.tsx  Library.test.tsx  Models.test.tsx  Settings.test.tsx  SetupWizard.test.tsx  Sidebar.test.tsx  app.store.test.ts  generate.store.test.ts  library.store.test.ts  models.store.test.ts  settings.store.test.ts  theme.test.ts
(+18 files in other folders)
